.env file support, allow origin allows all origins,

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
   php:
     container_name: php-apache
     build: ./docker/php
+    env_file: ".env"
     ports:
       - "8080:80"
     volumes:
